--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
+    "material-icons": "^1.10.6",
     "mongoose": "^6.1.6"
   },
   "devDependencies": {
