--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom"
   },
-  "proxy": "http://localhost:5000",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -26,5 +25,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
