--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "server": "nodemon app.js --ignore client",
-    "client": "npm run start --prefix client",
+    "server": "nodemon server.js --ignore client",
+    "client": "npm start --prefix client",
     "dev": "concurrently --raw --kill-others  \"npm run server\" \"npm run client\"",
     "test": ""
   },
@@ -30,6 +30,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "config": "^3.3.7",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
