--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "material-icons": "^1.10.6",
-    "mongoose": "^6.1.6"
+    "mongoose": "^6.1.6",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "concurrently": "^7.0.0",
