--- a/client/package.json
+++ b/client/package.json
@@ -26,5 +26,10 @@
             "last 1 safari version"
         ]
     },
-    "proxy": "http://192.168.1.9:5000"
+    "proxy": "http://192.168.1.9:5000",
+    "devDependencies": {
+        "eslint": "^8.17.0",
+        "eslint-config-google": "^0.14.0",
+        "eslint-plugin-react": "^7.30.0"
+    }
 }
