fix/actions 3 added linter to ci

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -32,7 +32,7 @@ jobs:
       run: npm run lint
 
     - name: Build Application 
-      run: npm run build
+      run: npm run client:build
 
     - name: Run Tests
       run: npm run test
