fix/actions 7  added linter to ci

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -26,8 +26,7 @@ jobs:
         cache: 'npm'
 
     - name: Install Modules 
-      run: npm install
-      run: npm install --prefix client
+      run: npm install && npm install --prefix client
 
     - name: Run Linter
       run: npm run lint
