--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -26,13 +26,13 @@ jobs:
         cache: 'npm'
 
     - name: Install Modules 
-      run: npm install
+      run: npm install && npm install --prefix client
 
     - name: Run Linter
       run: npm run lint
 
     - name: Build Application 
-      run: npm run build
+      run: npm run client:build
 
     - name: Run Tests
       run: npm run test
