--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
   "dependencies": {
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/graphql": "^10.0.21",
     "@nestjs/platform-express": "^8.0.0",
+    "apollo-server-express": "^3.10.0",
+    "bcryptjs": "^2.4.3",
+    "concurrently": "^7.0.0",
+    "cors": "^2.8.5",
+    "graphql": "^15.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "uuid": "^8.3.2",
-    "concurrently": "^7.0.0"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
