continue work on authorisation

--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ TYPEORM_PASSWORD=123456
 TYPEORM_DATABASE=beer-app-db
 TYPEORM_PORT=5432
 TYPEORM_HOST=localhost
+
+RT_SECRET=rt-secret-sample
+AT_SECRET=at-secret-sample
