--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^14.2.0",
     "bootstrap": "^5.2.1",
     "bootstrap-icons": "^1.9.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
