--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ API_PORT=3001
 API_HOST=http://localhost:
 
 TYPEORM_CONNECTION=postgres
-TYPEORM_USERNAME=admin
+TYPEORM_USERNAME=postgres
 TYPEORM_PASSWORD=123456
 TYPEORM_DATABASE=beer-app-db
 TYPEORM_PORT=5432
