--- a/client/package.json
+++ b/client/package.json
@@ -18,15 +18,19 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@apollo/client": "^3.0.0",
+    "@auth0/angular-jwt": "^5.1.0",
+    "@ngrx/effects": "^14.3.2",
+    "@ngrx/store": "^14.3.2",
     "apollo-angular": "^4.0.1",
     "bootstrap": "^5.2.1",
     "bootstrap-icons": "^1.9.1",
+    "graphql": "^16",
+    "js-base64": "^3.7.2",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "@apollo/client": "^3.0.0",
-    "graphql": "^16"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.3",
