--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,10 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "eslint \"**/*.{ts,tsx}\" "
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
-    "@angular-eslint/schematics": "^1.0.0",
     "@angular/animations": "^14.2.0",
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
@@ -36,12 +35,17 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.3",
-    "@angular/cli": "~14.2.3",
+    "@angular-eslint/builder": "15.0.0-alpha.5",
+    "@angular-eslint/eslint-plugin": "15.0.0-alpha.5",
+    "@angular-eslint/eslint-plugin-template": "15.0.0-alpha.5",
+    "@angular-eslint/schematics": "15.0.0-alpha.5",
+    "@angular-eslint/template-parser": "15.0.0-alpha.5",
+    "@angular/cli": "~15.0.0",
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~4.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.46.0",
-    "@typescript-eslint/parser": "^5.46.0",
-    "eslint": "^8.29.0",
+    "@typescript-eslint/eslint-plugin": "5.43.0",
+    "@typescript-eslint/parser": "5.43.0",
+    "eslint": "^8.28.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
