--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,8 @@
     "bootstrap": "^5.2.1",
     "bootstrap-icons": "^1.9.1",
     "graphql": "^16",
+    "graphql-tools": "^8.3.14",
+    "guid-typescript": "^1.0.9",
     "js-base64": "^3.7.2",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
