--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint",
-    "server": "ts-node ./server/server.ts"
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
