--- a/client/package.json
+++ b/client/package.json
@@ -1,61 +1,61 @@
 {
-  "name": "client",
-  "version": "0.0.0",
-  "scripts": {
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "lint": "ng lint"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^14.2.0",
-    "@angular/common": "^14.2.0",
-    "@angular/compiler": "^14.2.0",
-    "@angular/core": "^14.2.0",
-    "@angular/forms": "^14.2.0",
-    "@angular/platform-browser": "^14.2.0",
-    "@angular/platform-browser-dynamic": "^14.2.0",
-    "@angular/router": "^14.2.0",
-    "@apollo/client": "^3.0.0",
-    "@auth0/angular-jwt": "^5.1.0",
-    "@ngrx/effects": "^14.3.2",
-    "@ngrx/store": "^14.3.2",
-    "apollo-angular": "^4.0.1",
-    "bootstrap": "^5.2.1",
-    "bootstrap-icons": "^1.9.1",
-    "graphql": "^16",
-    "graphql-tools": "^8.3.14",
-    "guid-typescript": "^1.0.9",
-    "js-base64": "^3.7.2",
-    "popper.js": "^1.16.1",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.3",
-    "@angular-eslint/builder": "15.0.0-alpha.5",
-    "@angular-eslint/eslint-plugin": "15.0.0-alpha.5",
-    "@angular-eslint/eslint-plugin-template": "15.0.0-alpha.5",
-    "@angular-eslint/schematics": "15.0.0-alpha.5",
-    "@angular-eslint/template-parser": "15.0.0-alpha.5",
-    "@angular/cli": "~15.0.0",
-    "@angular/compiler-cli": "^14.2.0",
-    "@types/jasmine": "~4.0.0",
-    "@types/json-server": "^0.14.4",
-    "@typescript-eslint/eslint-plugin": "5.43.0",
-    "@typescript-eslint/parser": "5.43.0",
-    "eslint": "^8.28.0",
-    "jasmine-core": "~4.3.0",
-    "json-server": "^0.17.1",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "ts-node": "^10.9.1",
-    "typescript": "~4.7.2"
-  }
+    "name": "client",
+    "version": "0.0.0",
+    "scripts": {
+        "start": "ng serve",
+        "build": "ng build",
+        "watch": "ng build --watch --configuration development",
+        "test": "ng test",
+        "lint": "ng lint"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^14.2.0",
+        "@angular/common": "^14.2.0",
+        "@angular/compiler": "^14.2.0",
+        "@angular/core": "^14.2.0",
+        "@angular/forms": "^14.2.0",
+        "@angular/platform-browser": "^14.2.0",
+        "@angular/platform-browser-dynamic": "^14.2.0",
+        "@angular/router": "^14.2.0",
+        "@apollo/client": "^3.0.0",
+        "@ngrx/effects": "^14.3.2",
+        "@ngrx/store": "^14.3.2",
+        "apollo-angular": "^4.0.1",
+        "bootstrap": "^5.2.1",
+        "bootstrap-icons": "^1.9.1",
+        "graphql": "^16",
+        "graphql-tools": "^8.3.14",
+        "guid-typescript": "^1.0.9",
+        "js-base64": "^3.7.2",
+        "popper.js": "^1.16.1",
+        "rxjs": "~7.5.0",
+        "tslib": "^2.3.0",
+        "zone.js": "~0.11.4"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "^14.2.3",
+        "@angular-eslint/builder": "15.0.0-alpha.5",
+        "@angular-eslint/eslint-plugin": "15.0.0-alpha.5",
+        "@angular-eslint/eslint-plugin-template": "15.0.0-alpha.5",
+        "@angular-eslint/schematics": "15.0.0-alpha.5",
+        "@angular-eslint/template-parser": "15.0.0-alpha.5",
+        "@angular/cli": "~15.0.0",
+        "@angular/compiler-cli": "^14.2.0",
+        "@types/jasmine": "~4.0.0",
+        "@types/json-server": "^0.14.4",
+        "@types/jsonwebtoken": "^9.0.0",
+        "@typescript-eslint/eslint-plugin": "5.43.0",
+        "@typescript-eslint/parser": "5.43.0",
+        "eslint": "^8.28.0",
+        "jasmine-core": "~4.3.0",
+        "json-server": "^0.17.1",
+        "karma": "~6.4.0",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage": "~2.2.0",
+        "karma-jasmine": "~5.1.0",
+        "karma-jasmine-html-reporter": "~2.0.0",
+        "ts-node": "^10.9.1",
+        "typescript": "~4.7.2"
+    }
 }
