--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,8 @@
     "argon2": "^0.30.3",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "concurrently": "^7.0.0",
     "cors": "^2.8.5",
     "cross-var": "^1.1.0",
@@ -62,6 +64,7 @@
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
+    "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "eslint": "^8.20.0",
