--- a/server/package.json
+++ b/server/package.json
@@ -39,7 +39,7 @@
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
+    "class-validator": "^0.14.0",
     "concurrently": "^7.0.0",
     "cors": "^2.8.5",
     "cross-var": "^1.1.0",
@@ -50,6 +50,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "slugify": "^1.6.5",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
